--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 buildscript {
     ext {
         compose_ui_version = '1.2.0'
+        hilt_version = '2.40.5'
+    }
+
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
